--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>www.finrates.co.in</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
-  <script type="module" src="/src/index.jsx"></script>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>FinRates</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+<script type="module" src="/src/index.jsx"></script>
+
 </html>
