--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-SGZSYL416D"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'G-SGZSYL416D');
+    </script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>FinRates</title>
+    <link rel="icon" href="/logos/favicon1.ico" type="image/x-icon" />
+  </head>
 
-<head>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SGZSYL416D"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-SGZSYL416D');
-  </script>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FinRates</title>
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
-<script type="module" src="/src/index.jsx"></script>
-
+  <body>
+    <div id="root"></div>
+  </body>
+  <script type="module" src="/src/index.jsx"></script>
 </html>
