--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>FinRates</title>
-    <link rel="icon" href="/logos/favicon1.ico" type="image/x-icon" />
+    <link rel="icon" href="/logos/favicon.ico" type="image/x-icon" />
     <link rel="manifest" href="./manifest.webmanifest" />
   </head>
 
