--- a/index.html
+++ b/index.html
@@ -24,29 +24,29 @@
     <div id="root"></div>
   </body>
   <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function () {
-        console.log('Service Worker is registered');
-        navigator.serviceWorker.register('./service-worker.js');
-      });
-    }
+    // if ('serviceWorker' in navigator) {
+    //   window.addEventListener('load', function () {
+    //     console.log('Service Worker is registered');
+    //     navigator.serviceWorker.register('./service-worker.js');
+    //   });
+    // }
   </script>
   <script>
-    let deferredPrompt;
+    // let deferredPrompt;
 
-    window.addEventListener('beforeinstallprompt', (e) => {
-      e.preventDefault();
-      deferredPrompt = e;
-      deferredPrompt.prompt();
-      deferredPrompt.userChoice.then((choiceResult) => {
-        if (choiceResult.outcome === 'accepted') {
-          console.log('User accepted the A2HS prompt');
-        } else {
-          console.log('User dismissed the A2HS prompt');
-        }
-        deferredPrompt = null;
-      });
-    });
+    // window.addEventListener('beforeinstallprompt', (e) => {
+    //   e.preventDefault();
+    //   deferredPrompt = e;
+    //   deferredPrompt.prompt();
+    //   deferredPrompt.userChoice.then((choiceResult) => {
+    //     if (choiceResult.outcome === 'accepted') {
+    //       console.log('User accepted the A2HS prompt');
+    //     } else {
+    //       console.log('User dismissed the A2HS prompt');
+    //     }
+    //     deferredPrompt = null;
+    //   });
+    // });
   </script>
   <script type="module" src="/src/index.jsx"></script>
 </html>
