--- a/index.html
+++ b/index.html
@@ -15,38 +15,18 @@
     </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Compare and calculate fixed deposit interest rates from all banks and NBFCs. Find the highest FD rates and make informed investment decisions easily."
+    />
     <title>FinRates</title>
     <link rel="icon" href="/logos/favicon.ico" type="image/x-icon" />
-    <link rel="manifest" href="./manifest.webmanifest" />
+    <link rel="preload" href="fd-screener.avif" as="image" />
   </head>
 
   <body>
     <div id="root"></div>
   </body>
-  <script>
-    // if ('serviceWorker' in navigator) {
-    //   window.addEventListener('load', function () {
-    //     console.log('Service Worker is registered');
-    //     navigator.serviceWorker.register('./service-worker.js');
-    //   });
-    // }
-  </script>
-  <script>
-    // let deferredPrompt;
 
-    // window.addEventListener('beforeinstallprompt', (e) => {
-    //   e.preventDefault();
-    //   deferredPrompt = e;
-    //   deferredPrompt.prompt();
-    //   deferredPrompt.userChoice.then((choiceResult) => {
-    //     if (choiceResult.outcome === 'accepted') {
-    //       console.log('User accepted the A2HS prompt');
-    //     } else {
-    //       console.log('User dismissed the A2HS prompt');
-    //     }
-    //     deferredPrompt = null;
-    //   });
-    // });
-  </script>
   <script type="module" src="/src/index.jsx"></script>
 </html>
