--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="preload" href="fd-screener.avif" as="image" />
+    <link rel="preload" href="fd-calculator.avif" as="image" />
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-SGZSYL416D"
@@ -21,7 +23,6 @@
     />
     <title>FinRates</title>
     <link rel="icon" href="/logos/favicon.ico" type="image/x-icon" />
-    <link rel="preload" href="fd-screener.avif" as="image" />
   </head>
 
   <body>
