--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="preload" href="fd-screener.avif" as="image" />
-    <link rel="preload" href="fd-calculator.avif" as="image" />
+    <link rel="preconnect" href="https://www.googletagmanager.com" />
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-SGZSYL416D"
@@ -21,8 +20,11 @@
       name="description"
       content="Compare and calculate fixed deposit interest rates from all banks and NBFCs. Find the highest FD rates and make informed investment decisions easily."
     />
-    <title>FinRates</title>
-    <link rel="icon" href="/logos/favicon.ico" type="image/x-icon" />
+    <link rel="canonical" href="https://finrates.co.in" />
+    <title>
+      FinRates - Compare and Calculate Fixed Deposit Interest Rates.
+    </title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
 
   <body>
