--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Compare and calculate fixed deposit interest rates from all banks and NBFCs. Find the highest FD rates and make informed investment decisions easily."
+      content="Find the latest fixed deposit rates from all banks and NBFCs. Compare FD rates and Calculate returns on your investments to make informed decisions easily."
     />
-    <link rel="canonical" href="https://finrates.co.in" />
-    <title>
-      FinRates - Compare and Calculate Fixed Deposit Interest Rates.
-    </title>
+    <title>FinRates - Compare, Calculate and Optimize.</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
 
