--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     />
     <title>FinRates - Compare, Calculate and Optimize.</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="preconnect" href="https://firebase.googleapis.com" />
   </head>
 
   <body>
