--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Find the latest fixed deposit rates from all banks and NBFCs. Compare FD rates and Calculate returns on your investments to make informed decisions easily."
+      content="Check and Compare the latest FD rates from all leading banks and NBFCs in India 2024. Compare Fixed deposit rates and Calculate returns for your savings to make informed decisions easily."
     />
-    <title>FinRates - Compare, Calculate and Optimize.</title>
+    <title>FinRates - Latest Fixed Deposit Interest Rates in India 2024</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://firebase.googleapis.com" />
   </head>
