--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Check and Compare the latest FD rates from all leading banks and NBFCs in India 2024. Compare Fixed deposit rates and Calculate returns for your savings to make informed decisions easily."
+      content="Check the Latest FD Rates from Top Banks and NBFCs in India 2024. Use FinRates' FD Screener and Calculator to Compare Rates and Calculate Returns easily."
     />
     <title>FinRates - Latest Fixed Deposit Interest Rates in India 2024</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://firebase.googleapis.com" />
+
+    <meta
+      property="og:title"
+      content="FinRates - Latest Fixed Deposit Interest Rates in India 2024"
+    />
+    <meta
+      property="og:description"
+      content="Check the Latest FD Rates from Top Banks and NBFCs in India 2024. Use FinRates' FD Screener and Calculator to Compare Rates and Calculate Returns easily."
+    />
+    <meta property="og:url" content="https://finrates.co.in" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://finrates.co.in/favicon.ico" />
+    <meta property="og:site_name" content="FinRates" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:social" content="Instagram" />
+    <meta
+      property="og:instagram"
+      content="https://www.instagram.com/finratesindia"
+    />
+
+    <link rel="me" href="https://www.instagram.com/finratesindia" />
   </head>
 
   <body>
