--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Check the Latest FD Rates from Top Banks and NBFCs in India 2024. Use FinRates' FD Screener and Calculator to Compare Rates and Calculate Returns easily."
+      content="Check the Latest FD Rates from Top Banks and NBFCs in India 2024. Use FinRates FD Screener and Calculator to Compare Rates and Calculate Returns easily."
     />
     <title>FinRates - Latest Fixed Deposit Interest Rates in India 2024</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
@@ -17,7 +17,7 @@
     />
     <meta
       property="og:description"
-      content="Check the Latest FD Rates from Top Banks and NBFCs in India 2024. Use FinRates' FD Screener and Calculator to Compare Rates and Calculate Returns easily."
+      content="Check the Latest FD Rates from Top Banks and NBFCs in India 2024. Use FinRates FD Screener and Calculator to Compare Rates and Calculate Returns easily."
     />
     <meta property="og:url" content="https://finrates.co.in" />
     <meta property="og:type" content="website" />
@@ -31,6 +31,19 @@
     />
 
     <link rel="me" href="https://www.instagram.com/finratesindia" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@FinRatesIndia" />
+    <meta
+      name="twitter:title"
+      content="FinRates - Latest Fixed Deposit Interest Rates in India 2024"
+    />
+    <meta
+      name="twitter:description"
+      content="Check the Latest FD Rates from Top Banks and NBFCs in India 2024. Use FinRates FD Screener and Calculator to Compare Rates and Calculate Returns easily."
+    />
+    <meta name="twitter:image" content="https://finrates.co.in/favicon.ico" />
+    <meta name="twitter:creator" content="@FinRatesIndia" />
   </head>
 
   <body>
