--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Check the Latest FD Rates from Top Banks and NBFCs in India 2025. Use FinRates FD Screener and Calculator to Compare Rates and Calculate Returns easily."
+      content="Explore FinRates for the Latest Fixed Deposit Interest Rates in India 2025. Use our FD, SIP, EMI, Goal, and Interest Calculators to compare rates, calculate returns, and plan your financial goals with detailed breakdowns and interactive charts."
     />
     <title>FinRates - Latest Fixed Deposit Interest Rates in India 2025</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
@@ -17,7 +17,7 @@
     />
     <meta
       property="og:description"
-      content="Check the Latest FD Rates from Top Banks and NBFCs in India 2025. Use FinRates FD Screener and Calculator to Compare Rates and Calculate Returns easily."
+      content="Explore FinRates for the Latest Fixed Deposit Interest Rates in India 2025. Use our FD, SIP, EMI, Goal, and Interest Calculators to compare rates, calculate returns, and plan your financial goals with detailed breakdowns and interactive charts."
     />
     <meta property="og:url" content="https://finrates.co.in" />
     <meta property="og:type" content="website" />
@@ -40,7 +40,7 @@
     />
     <meta
       name="twitter:description"
-      content="Check the Latest FD Rates from Top Banks and NBFCs in India 2025. Use FinRates FD Screener and Calculator to Compare Rates and Calculate Returns easily."
+      content="Explore FinRates for the Latest Fixed Deposit Interest Rates in India 2025. Use our FD, SIP, EMI, Goal, and Interest Calculators to compare rates, calculate returns, and plan your financial goals with detailed breakdowns and interactive charts."
     />
     <meta name="twitter:image" content="https://finrates.co.in/favicon.ico" />
     <meta name="twitter:creator" content="@FinRatesIndia" />
