feat: add various icons and apple touch icon for improved branding and usability

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     />
     <title>FinRates - Latest Fixed Deposit Interest Rates in India 2025</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="preconnect" href="https://firebase.googleapis.com" />
 
     <meta
