feat: improve layout and accessibility by adjusting viewport meta tag and adding safe area insets

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
     <meta
       name="description"
       content="Explore FinRates for the Latest Fixed Deposit Interest Rates in India 2025. Use our FD, SIP, EMI, Goal, and Interest Calculators to compare rates, calculate returns, and plan your financial goals with detailed breakdowns and interactive charts."
