style: Update meta tags and descriptions for improved SEO; enhance Home component with Home Loan Comparison feature

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     />
     <meta
       name="description"
-      content="Explore FinRates for the Latest Fixed Deposit Interest Rates in India 2025. Use our FD, SIP, EMI, Goal, and Interest Calculators to compare rates, calculate returns, and plan your financial goals with detailed breakdowns and interactive charts."
+      content="Check latest home loan and fixed deposit interest rates from top banks and NBFCs in India 2025. Financial tools, screeners, and calculators with detailed analysis and interactive charts to make informed investment decisions."
     />
-    <title>FinRates - Latest Fixed Deposit Interest Rates in India 2025</title>
+    <title>FinRates - Latest Interest Rates, Tools & Calculators</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="preconnect" href="https://firebase.googleapis.com" />
 
     <meta
       property="og:title"
-      content="FinRates - Latest Fixed Deposit Interest Rates in India 2025"
+      content="FinRates - Lates Home Loan & Fixed Deposit Interest Rates, Tools & Calculators India 2025"
     />
     <meta
       property="og:description"
-      content="Explore FinRates for the Latest Fixed Deposit Interest Rates in India 2025. Use our FD, SIP, EMI, Goal, and Interest Calculators to compare rates, calculate returns, and plan your financial goals with detailed breakdowns and interactive charts."
+      content="Check latest home loan and fixed deposit interest rates from top banks and NBFCs in India 2025. Financial tools, screeners, and calculators with detailed analysis and interactive charts to support informed investment decisions."
     />
     <meta property="og:url" content="https://finrates.co.in" />
     <meta property="og:type" content="website" />
@@ -40,14 +40,28 @@
     <meta name="twitter:site" content="@FinRatesIndia" />
     <meta
       name="twitter:title"
-      content="FinRates - Latest Fixed Deposit Interest Rates in India 2025"
+      content="FinRates - Home Loan & Fixed Deposit Interest Rates, Tools & Calculators India 2025"
     />
     <meta
       name="twitter:description"
-      content="Explore FinRates for the Latest Fixed Deposit Interest Rates in India 2025. Use our FD, SIP, EMI, Goal, and Interest Calculators to compare rates, calculate returns, and plan your financial goals with detailed breakdowns and interactive charts."
+      content="Check latest home loan and fixed deposit interest rates from top banks and NBFCs in India 2025. Financial tools, screeners, and calculators with detailed analysis and interactive charts to support informed investment decisions."
     />
     <meta name="twitter:image" content="https://finrates.co.in/favicon.ico" />
     <meta name="twitter:creator" content="@FinRatesIndia" />
+    <link rel="canonical" href="https://finrates.co.in/" />
+    <meta
+      name="keywords"
+      content="home loan, fixed deposit, interest rates, India, FD calculator, FD comparison, EMI calculator, SIP calculator, STP calculator, SWP calculator, goal calculator, interest calculator, loan rate change calculator, prepay vs invest calculator, government schemes, PPF calculator, bank rates, NBFC, loan comparison, deposit rates, investment tools, tax saving, public provident fund, systematic investment plan, systematic transfer plan, systematic withdrawal plan"
+    />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "FinRates",
+        "url": "https://finrates.co.in/",
+        "description": "Check latest home loan and fixed deposit interest rates from top banks and NBFCs in India 2025. Financial tools, screeners, and calculators with detailed analysis and interactive charts to make informed investment decisions."
+      }
+    </script>
   </head>
 
   <body>
