style: Update meta tags for improved SEO and add new URLs to sitemap; clean up whitespace in HomeLoanComparison and LoanRateChangeCalculator components

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <meta
       property="og:title"
-      content="FinRates - Lates Home Loan & Fixed Deposit Interest Rates, Tools & Calculators India 2025"
+      content="FinRates - Latest Home Loan & Fixed Deposit Interest Rates, Tools & Calculators India 2025"
     />
     <meta
       property="og:description"
@@ -28,13 +28,9 @@
     <meta property="og:image" content="https://finrates.co.in/favicon.ico" />
     <meta property="og:site_name" content="FinRates" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:social" content="Instagram" />
-    <meta
-      property="og:instagram"
-      content="https://www.instagram.com/finratesindia"
-    />
 
     <link rel="me" href="https://www.instagram.com/finratesindia" />
+    <link rel="me" href="https://twitter.com/FinRatesIndia" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@FinRatesIndia" />
@@ -56,10 +52,231 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "WebSite",
-        "name": "FinRates",
-        "url": "https://finrates.co.in/",
-        "description": "Check latest home loan and fixed deposit interest rates from top banks and NBFCs in India 2025. Financial tools, screeners, and calculators with detailed analysis and interactive charts to make informed investment decisions."
+        "@graph": [
+          {
+            "@type": "Organization",
+            "@id": "https://finrates.co.in/#organization",
+            "name": "FinRates",
+            "url": "https://finrates.co.in/",
+            "logo": "https://finrates.co.in/finrates-logo.svg",
+            "sameAs": [
+              "https://www.instagram.com/finratesindia",
+              "https://twitter.com/FinRatesIndia"
+            ]
+          },
+          {
+            "@type": "WebSite",
+            "@id": "https://finrates.co.in/#website",
+            "name": "FinRates",
+            "url": "https://finrates.co.in/",
+            "description": "Check latest home loan and fixed deposit interest rates from top banks and NBFCs in India 2025. Financial tools, screeners, and calculators with detailed analysis and interactive charts to make informed investment decisions.",
+            "publisher": {
+              "@id": "https://finrates.co.in/#organization"
+            },
+            "potentialAction": {
+              "@type": "SearchAction",
+              "target": {
+                "@type": "EntryPoint",
+                "urlTemplate": "https://finrates.co.in/search?q={search_term_string}"
+              },
+              "query-input": "required name=search_term_string"
+            },
+            "mainEntity": {
+              "@type": "ItemList",
+              "name": "Financial Calculators and Tools",
+              "description": "A collection of popular financial calculators and tools offered by FinRates.",
+              "itemListElement": [
+                {
+                  "@type": "ListItem",
+                  "position": 1,
+                  "item": {
+                    "@type": "Product",
+                    "name": "Loan Rate Change Calculator",
+                    "description": "Analyze impact of interest rate changes on your existing loans.",
+                    "url": "https://finrates.co.in/calculators/loan-rate-change-calculator",
+                    "category": "FinancialApplication"
+                  }
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 2,
+                  "item": {
+                    "@type": "Product",
+                    "name": "Home Loan Comparison",
+                    "description": "Compare home loan interest rates, EMIs, and features across banks.",
+                    "url": "https://finrates.co.in/home-loan/comparison",
+                    "category": "FinancialApplication"
+                  }
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 3,
+                  "item": {
+                    "@type": "Product",
+                    "name": "FD Highest Rates",
+                    "description": "Compare latest fixed deposit rates from top banks and NBFCs in India.",
+                    "url": "https://finrates.co.in/fixed-deposit",
+                    "category": "FinancialApplication"
+                  }
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 4,
+                  "item": {
+                    "@type": "Product",
+                    "name": "FD Comparator",
+                    "description": "Calculate and compare returns from different fixed deposit schemes.",
+                    "url": "https://finrates.co.in/fixed-deposit/comparator",
+                    "category": "FinancialApplication"
+                  }
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 5,
+                  "item": {
+                    "@type": "Product",
+                    "name": "Government Schemes Comparison",
+                    "description": "Compare popular government investment schemes and tax-saving options.",
+                    "url": "https://finrates.co.in/government-schemes/comparison",
+                    "category": "FinancialApplication"
+                  }
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 6,
+                  "item": {
+                    "@type": "Product",
+                    "name": "EMI Calculator",
+                    "description": "Calculate loan EMIs, interest costs, and repayment schedules.",
+                    "url": "https://finrates.co.in/calculators/emi-calculator",
+                    "category": "FinancialApplication"
+                  }
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 7,
+                  "item": {
+                    "@type": "Product",
+                    "name": "Prepay vs Invest Calculator",
+                    "description": "Compare loan prepayment benefits against investment returns.",
+                    "url": "https://finrates.co.in/calculators/loan-prepay-vs-investment-calculator",
+                    "category": "FinancialApplication"
+                  }
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 8,
+                  "item": {
+                    "@type": "Product",
+                    "name": "PPF Calculator",
+                    "description": "Calculate Public Provident Fund returns and maturity amounts.",
+                    "url": "https://finrates.co.in/calculators/ppf-calculator",
+                    "category": "FinancialApplication"
+                  }
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 9,
+                  "item": {
+                    "@type": "Product",
+                    "name": "SIP Calculator",
+                    "description": "Plan your mutual fund investments with systematic investment planning.",
+                    "url": "https://finrates.co.in/calculators/sip-calculator",
+                    "category": "FinancialApplication"
+                  }
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 10,
+                  "item": {
+                    "@type": "Product",
+                    "name": "STP Calculator",
+                    "description": "Optimize systematic transfer plans between mutual funds.",
+                    "url": "https://finrates.co.in/calculators/stp-calculator",
+                    "category": "FinancialApplication"
+                  }
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 11,
+                  "item": {
+                    "@type": "Product",
+                    "name": "SWP Calculator",
+                    "description": "Plan systematic withdrawals from your investment portfolio.",
+                    "url": "https://finrates.co.in/calculators/swp-calculator",
+                    "category": "FinancialApplication"
+                  }
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 12,
+                  "item": {
+                    "@type": "Product",
+                    "name": "Goal Calculator",
+                    "description": "Plan your financial goals with required monthly savings calculations.",
+                    "url": "https://finrates.co.in/calculators/goal-calculator",
+                    "category": "FinancialApplication"
+                  }
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 13,
+                  "item": {
+                    "@type": "Product",
+                    "name": "Interest Calculator",
+                    "description": "Calculate compound and simple interest for various investment scenarios.",
+                    "url": "https://finrates.co.in/calculators/interest-calculator",
+                    "category": "FinancialApplication"
+                  }
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 14,
+                  "item": {
+                    "@type": "Product",
+                    "name": "FD Calculate & Compare",
+                    "description": "Calculate and compare fixed deposit returns for any bank or NBFC.",
+                    "url": "https://finrates.co.in/fixed-deposit/calculator",
+                    "category": "FinancialApplication"
+                  }
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 15,
+                  "item": {
+                    "@type": "Product",
+                    "name": "FD Highest Rates (Detailed)",
+                    "description": "View the highest fixed deposit rates across all banks and NBFCs in India.",
+                    "url": "https://finrates.co.in/fixed-deposit/view/highest-rates",
+                    "category": "FinancialApplication"
+                  }
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 16,
+                  "item": {
+                    "@type": "Product",
+                    "name": "FD Specific Tenure Rates",
+                    "description": "Find fixed deposit rates for specific tenures across banks.",
+                    "url": "https://finrates.co.in/fixed-deposit/view/specific-tenures",
+                    "category": "FinancialApplication"
+                  }
+                },
+                {
+                  "@type": "ListItem",
+                  "position": 17,
+                  "item": {
+                    "@type": "Product",
+                    "name": "FD All Rates",
+                    "description": "Browse all fixed deposit rates for all banks and NBFCs.",
+                    "url": "https://finrates.co.in/fixed-deposit/view/all",
+                    "category": "FinancialApplication"
+                  }
+                }
+              ]
+            }
+          }
+        ]
       }
     </script>
   </head>
