--- a/index.html
+++ b/index.html
@@ -90,187 +90,187 @@
                   "@type": "ListItem",
                   "position": 1,
                   "item": {
-                    "@type": "Product",
+                    "@type": "SoftwareApplication",
                     "name": "Loan Rate Change Calculator",
                     "description": "Analyze impact of interest rate changes on your existing loans.",
                     "url": "https://finrates.co.in/calculators/loan-rate-change-calculator",
-                    "category": "FinancialApplication"
+                    "applicationCategory": "Utility"
                   }
                 },
                 {
                   "@type": "ListItem",
                   "position": 2,
                   "item": {
-                    "@type": "Product",
+                    "@type": "SoftwareApplication",
                     "name": "Home Loan Comparison",
                     "description": "Compare home loan interest rates, EMIs, and features across banks.",
                     "url": "https://finrates.co.in/home-loan/comparison",
-                    "category": "FinancialApplication"
+                    "applicationCategory": "Utility"
                   }
                 },
                 {
                   "@type": "ListItem",
                   "position": 3,
                   "item": {
-                    "@type": "Product",
+                    "@type": "SoftwareApplication",
                     "name": "FD Highest Rates",
                     "description": "Compare latest fixed deposit rates from top banks and NBFCs in India.",
                     "url": "https://finrates.co.in/fixed-deposit",
-                    "category": "FinancialApplication"
+                    "applicationCategory": "Utility"
                   }
                 },
                 {
                   "@type": "ListItem",
                   "position": 4,
                   "item": {
-                    "@type": "Product",
+                    "@type": "SoftwareApplication",
                     "name": "FD Comparator",
                     "description": "Calculate and compare returns from different fixed deposit schemes.",
                     "url": "https://finrates.co.in/fixed-deposit/comparator",
-                    "category": "FinancialApplication"
+                    "applicationCategory": "Utility"
                   }
                 },
                 {
                   "@type": "ListItem",
                   "position": 5,
                   "item": {
-                    "@type": "Product",
+                    "@type": "SoftwareApplication",
                     "name": "Government Schemes Comparison",
                     "description": "Compare popular government investment schemes and tax-saving options.",
                     "url": "https://finrates.co.in/government-schemes/comparison",
-                    "category": "FinancialApplication"
+                    "applicationCategory": "Utility"
                   }
                 },
                 {
                   "@type": "ListItem",
                   "position": 6,
                   "item": {
-                    "@type": "Product",
+                    "@type": "SoftwareApplication",
                     "name": "EMI Calculator",
                     "description": "Calculate loan EMIs, interest costs, and repayment schedules.",
                     "url": "https://finrates.co.in/calculators/emi-calculator",
-                    "category": "FinancialApplication"
+                    "applicationCategory": "Utility"
                   }
                 },
                 {
                   "@type": "ListItem",
                   "position": 7,
                   "item": {
-                    "@type": "Product",
+                    "@type": "SoftwareApplication",
                     "name": "Prepay vs Invest Calculator",
                     "description": "Compare loan prepayment benefits against investment returns.",
                     "url": "https://finrates.co.in/calculators/loan-prepay-vs-investment-calculator",
-                    "category": "FinancialApplication"
+                    "applicationCategory": "Utility"
                   }
                 },
                 {
                   "@type": "ListItem",
                   "position": 8,
                   "item": {
-                    "@type": "Product",
+                    "@type": "SoftwareApplication",
                     "name": "PPF Calculator",
                     "description": "Calculate Public Provident Fund returns and maturity amounts.",
                     "url": "https://finrates.co.in/calculators/ppf-calculator",
-                    "category": "FinancialApplication"
+                    "applicationCategory": "Utility"
                   }
                 },
                 {
                   "@type": "ListItem",
                   "position": 9,
                   "item": {
-                    "@type": "Product",
+                    "@type": "SoftwareApplication",
                     "name": "SIP Calculator",
                     "description": "Plan your mutual fund investments with systematic investment planning.",
                     "url": "https://finrates.co.in/calculators/sip-calculator",
-                    "category": "FinancialApplication"
+                    "applicationCategory": "Utility"
                   }
                 },
                 {
                   "@type": "ListItem",
                   "position": 10,
                   "item": {
-                    "@type": "Product",
+                    "@type": "SoftwareApplication",
                     "name": "STP Calculator",
                     "description": "Optimize systematic transfer plans between mutual funds.",
                     "url": "https://finrates.co.in/calculators/stp-calculator",
-                    "category": "FinancialApplication"
+                    "applicationCategory": "Utility"
                   }
                 },
                 {
                   "@type": "ListItem",
                   "position": 11,
                   "item": {
-                    "@type": "Product",
+                    "@type": "SoftwareApplication",
                     "name": "SWP Calculator",
                     "description": "Plan systematic withdrawals from your investment portfolio.",
                     "url": "https://finrates.co.in/calculators/swp-calculator",
-                    "category": "FinancialApplication"
+                    "applicationCategory": "Utility"
                   }
                 },
                 {
                   "@type": "ListItem",
                   "position": 12,
                   "item": {
-                    "@type": "Product",
+                    "@type": "SoftwareApplication",
                     "name": "Goal Calculator",
                     "description": "Plan your financial goals with required monthly savings calculations.",
                     "url": "https://finrates.co.in/calculators/goal-calculator",
-                    "category": "FinancialApplication"
+                    "applicationCategory": "Utility"
                   }
                 },
                 {
                   "@type": "ListItem",
                   "position": 13,
                   "item": {
-                    "@type": "Product",
+                    "@type": "SoftwareApplication",
                     "name": "Interest Calculator",
                     "description": "Calculate compound and simple interest for various investment scenarios.",
                     "url": "https://finrates.co.in/calculators/interest-calculator",
-                    "category": "FinancialApplication"
+                    "applicationCategory": "Utility"
                   }
                 },
                 {
                   "@type": "ListItem",
                   "position": 14,
                   "item": {
-                    "@type": "Product",
+                    "@type": "SoftwareApplication",
                     "name": "FD Calculate & Compare",
                     "description": "Calculate and compare fixed deposit returns for any bank or NBFC.",
                     "url": "https://finrates.co.in/fixed-deposit/calculator",
-                    "category": "FinancialApplication"
+                    "applicationCategory": "Utility"
                   }
                 },
                 {
                   "@type": "ListItem",
                   "position": 15,
                   "item": {
-                    "@type": "Product",
+                    "@type": "SoftwareApplication",
                     "name": "FD Highest Rates (Detailed)",
                     "description": "View the highest fixed deposit rates across all banks and NBFCs in India.",
                     "url": "https://finrates.co.in/fixed-deposit/view/highest-rates",
-                    "category": "FinancialApplication"
+                    "applicationCategory": "Utility"
                   }
                 },
                 {
                   "@type": "ListItem",
                   "position": 16,
                   "item": {
-                    "@type": "Product",
+                    "@type": "SoftwareApplication",
                     "name": "FD Specific Tenure Rates",
                     "description": "Find fixed deposit rates for specific tenures across banks.",
                     "url": "https://finrates.co.in/fixed-deposit/view/specific-tenures",
-                    "category": "FinancialApplication"
+                    "applicationCategory": "Utility"
                   }
                 },
                 {
                   "@type": "ListItem",
                   "position": 17,
                   "item": {
-                    "@type": "Product",
+                    "@type": "SoftwareApplication",
                     "name": "FD All Rates",
                     "description": "Browse all fixed deposit rates for all banks and NBFCs.",
                     "url": "https://finrates.co.in/fixed-deposit/view/all",
-                    "category": "FinancialApplication"
+                    "applicationCategory": "Utility"
                   }
                 }
               ]
